[gd_scene load_steps=4 format=3 uid="uid://33tiur8t6ppj"]

[ext_resource type="Script" uid="uid://hfv5hwbyikb" path="res://src/GoalArea.gd" id="1_02e8n"]
[ext_resource type="PackedScene" uid="uid://cspsr0vq4va0y" path="res://obstacles/toilet_b.tscn" id="1_802au"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6lvjl"]
radius = 0.2

[node name="GoalArea" type="Area3D" groups=["obstacles"]]
script = ExtResource("1_02e8n")

[node name="GoalMesh" parent="." instance=ExtResource("1_802au")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123468, 0, -0.0781193)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.530089, 0, 0)
shape = SubResource("CylinderShape3D_6lvjl")

[node name="GoalCam" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.156434, -0.459119, -0.874493, 0, 0.885394, -0.464842, 0.987688, -0.0727173, -0.138506, -0.723, -0.209, -0.106)
current = true
fov = 57.4
near = 0.029

[node name="EntrancePivot" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.17839, 0, -0.98396, 0, 1, 0, 0.98396, 0, -0.17839, 0.525203, -0.832, -0.12009)
gizmo_extents = 1.73

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
